Updated JSVM version to 2.0 in comment at start of config files; added line to layer configs specifying FGS quality of base layer (justin.ridge@nokia.com).

--- a/JSVM0-config-samples/Munich-Test-Points/cfg/City_layer0.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/City_layer0.cfg
@@ -1,4 +1,4 @@
-# JSVM 0.0 Layer Configuration File
+# JSVM 2.0 Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
 176                                               # Input  frame width
@@ -28,6 +28,7 @@ tmp/CITY_rec_layer0.yuv                           # Reconstructed file
 28.00                                             # QP for motion estimation / mode decision (stage 5)
 
 0                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
+3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 0                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 mot/CITY_layer0.mot                               # Motion Info File
