--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Bus_layer4.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Bus_layer4.cfg
@@ -1,4 +1,4 @@
-# JSVM 0.0 Layer Configuration File
+# JSVM 2.0 Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
 352                                               # Input  frame width
@@ -28,6 +28,7 @@ tmp/BUS_rec_layer4.yuv                            # Reconstructed file
 35.00                                             # QP for motion estimation / mode decision (stage 5)
 
 1                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
+3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 0                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 mot/BUS_layer4.mot                                # Motion Info File
