--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer_layer1.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer_layer1.cfg
@@ -1,4 +1,4 @@
-# JSVM 0.0 Layer Configuration File
+# JSVM 2.0 Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
 176                                               # Input  frame width
@@ -28,6 +28,7 @@ tmp/SOCCER_rec_layer1.yuv                         # Reconstructed file
 26.00                                             # QP for motion estimation / mode decision (stage 5)
 
 1                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
+3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 0                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 mot/SOCCER_layer1.mot                             # Motion Info File
