--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/City_layer1.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/City_layer1.cfg
@@ -28,6 +28,7 @@ tmp/CITY_rec_layer1.yuv                           # Reconstructed file
 34.00                                             # QP for motion estimation / mode decision (stage 5)
 
 2                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
+3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 1                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 mot/CITY_layer1.mot                               # Motion Info File
