--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Harbour_layer0.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Harbour_layer0.cfg
@@ -28,6 +28,7 @@ tmp/HARBOUR_rec_layer0.yuv                        # Reconstructed file
 30.00                                             # QP for motion estimation / mode decision (stage 5)
 
 0                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
+3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 1                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 mot/HARBOUR_layer0.mot                            # Motion Info File
