minor fix in FixedQpEncoder (Heiko Schwarz <hschwarz@hhi.de>)

--- a/JSVM/H264Extension/data/fixedQpEncoder.cfg
+++ b/JSVM/H264Extension/data/fixedQpEncoder.cfg
@@ -7,23 +7,24 @@ test.264                                              # Bit Stream File
 .                                                     # Motion File Folder
 150                                                   # Number Of Frames
 30.0                                                  # Frames Per Second
-3                                                     # Number Of Layers
+2                                                     # Number Of Layers
+1                                                     # constrained intra for base layer (single-loop decoding)
 
 
 ---------- LAYER 0 ----------
 64.00                                                 # Bit rate [kbit/s]
-1.00                                                  # Maximum Negative Mismatch [%]
+2.00                                                  # Maximum Negative Mismatch [%]
 1.00                                                  # Maximum Positive Mismatch [%]
-34.0                                                  # Start QP
+36.2                                                  # Start QP
 
 ---------- LAYER 1 ----------
-128.00                                                # Bit rate [kbit/s]
+96.00                                                # Bit rate [kbit/s]
 1.00                                                  # Maximum Negative Mismatch [%]
 1.00                                                  # Maximum Positive Mismatch [%]
-30.0                                                  # Start QP
+34.8                                                  # Start QP
 
 ---------- LAYER 2 ----------
-1024.00                                               # Bit rate [kbit/s]
+192.00                                               # Bit rate [kbit/s]
 1.00                                                  # Maximum Negative Mismatch [%]
 1.00                                                  # Maximum Positive Mismatch [%]
-29.0                                                  # Start QP
+41.0                                                  # Start QP
