--- a/JSVM0-config-samples/Munich-Test-Points/rc_cfg/City.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/rc_cfg/City.cfg
@@ -8,6 +8,7 @@ mot                                                   # Motion File Folder
 600                                                   # Number Of Frames
 60.0                                                  # Frames Per Second
 6                                                     # Number Of Layers
+0                                                     # constrained intra for base layer (single-loop decoding)
 
 
 ---------- LAYER 0 ----------
