--- a/JSVM0-config-samples/Munich-Test-Points/rc_cfg/Mobile.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/rc_cfg/Mobile.cfg
@@ -8,6 +8,7 @@ mot                                                   # Motion File Folder
 300                                                   # Number Of Frames
 30.0                                                  # Frames Per Second
 5                                                     # Number Of Layers
+0                                                     # constrained intra for base layer (single-loop decoding)
 
 
 ---------- LAYER 0 ----------
