Updated to add QualityLevel estimation line (France Telecom)

--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer.cfg
@@ -5,6 +5,7 @@ str/soccer.264                  # Bitstream file
 60.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 600                             # Number of frames (at input frame rate)
+0				# Quality Levels estimation
 
 #============================== MCTF ==============================
 32                              # GOP Size (at maximum frame rate)
