--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Foreman.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Foreman.cfg
@@ -5,6 +5,7 @@ str/Foreman_CIF30-256.264       # Bitstream file
 30.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 300                             # Number of frames (at input frame rate)
+0				# QualityLevel Estimation
 
 #============================== MCTF ==============================
 32                              # GOP Size (at maximum frame rate)
