--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Foreman.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Foreman.cfg
@@ -5,6 +5,7 @@ str/foreman.264                 # Bitstream file
 30.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 300                             # Number of frames (at input frame rate)
+0				# Quality Levels estimation
 
 #============================== MCTF ==============================
 32                              # GOP Size (at maximum frame rate)
