--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Football.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Football.cfg
@@ -5,6 +5,7 @@ str/Football_CIF30-1024.264     # Bitstream file
 30.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 260                             # Number of frames (at input frame rate)
+0				# QualityLevel Estimation
 
 #============================== MCTF ==============================
 16                              # GOP Size (at maximum frame rate)
