--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Harbour.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Harbour.cfg
@@ -5,6 +5,7 @@ str/Harbour_4CIF60-3072.264     # Bitstream file
 60.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 600                             # Number of frames (at input frame rate)
+0				# QualityLevel Estimation
 
 #============================== MCTF ==============================
 64                              # GOP Size (at maximum frame rate)
