--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Soccer.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Soccer.cfg
@@ -5,6 +5,7 @@ str/Soccer_4CIF60-3072.264      # Bitstream file
 60.0                            # Maximum frame rate [Hz]
 1200.0                          # Maximum structural delay [ms]
 600                             # Number of frames (at input frame rate)
+0				# Quality Level estimation
 
 #============================== MCTF ==============================
 32                              # GOP Size (at maximum frame rate)
