Extended spatial scalability - Thomson (jerome.vieron@thomson.net)

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -5,6 +5,7 @@ test.264                        # Bitstream file
 30.0                            # Maximum frame rate [Hz]
 1200                            # Maximum structural delay [ms]
 150                             # Number of frames (at maximum frame rate)
+0                               # Quality level estimation
 
 #============================== MCTF ==============================
 32                              # GOP Size (at maximum frame rate)
