--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -33,3 +33,11 @@ rec_layer1.yuv                                    # Reconstructed file
 
 2                                                 # Motion Info Mode (0:no, 1:load, 2:save )
 layer1.mot                                        # Motion Info File
+
+ESS
+1                                                 # 0: no ESS 1: Sequence Level 2: Picture Level 
+cfg/BUS_ESS2.dat                                  # Picture Level parameters file name
+640                                               # Cropping width
+512                                               # Cropping height
+24                                                # Cropping origin X
+16                                                # Cropping origin Y
