Adaptive Gop Size implementation (jsy@etri.re.kr)

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -32,3 +32,8 @@ test.264                        # Bitstream file
 ..\..\..\data\layer1.cfg   		# Layer configuration file
 ..\..\..\data\layer2.cfg   		# Layer configuration file
 ..\..\..\data\layer3.cfg   		# Layer configuration file
+
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\mode.dat			# GOP mode file
