--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Foreman.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Foreman.cfg
@@ -34,3 +34,7 @@ cfg/Foreman_layer2.cfg          # Layer configuration file
 cfg/Foreman_layer3.cfg          # Layer configuration file
 cfg/Foreman_layer4.cfg          # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Foreman_gop_mode.dat	# GOP mode file
