--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Mobile.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Mobile.cfg
@@ -34,3 +34,7 @@ cfg/Mobile_layer2.cfg           # Layer configuration file
 cfg/Mobile_layer3.cfg           # Layer configuration file
 cfg/Mobile_layer4.cfg           # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Mobile_gop_mode.dat		# GOP mode file
