--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Crew.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Crew.cfg
@@ -32,3 +32,7 @@ cfg/Crew_layer0.cfg             # Layer configuration file
 cfg/Crew_layer1.cfg             # Layer configuration file
 cfg/Crew_layer2.cfg             # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Crew_gop_mode.dat		# GOP mode file
