--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Mobile.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Mobile.cfg
@@ -31,3 +31,7 @@ str/Mobile_CIF30-384.264        # Bitstream file
 cfg/Mobile_layer0.cfg           # Layer configuration file
 cfg/Mobile_layer1.cfg           # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Mobile_gop_mode.dat		# GOP mode file
