--- a/JSVM0-config-samples/Munich-Test-Points/cfg/City.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/City.cfg
@@ -35,3 +35,7 @@ cfg/City_layer3.cfg             # Layer configuration file
 cfg/City_layer4.cfg             # Layer configuration file
 cfg/City_layer5.cfg             # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\City_gop_mode.dat		# GOP mode file
