--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Football.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Football.cfg
@@ -33,3 +33,8 @@ cfg/Football_layer1.cfg         # Layer configuration file
 cfg/Football_layer2.cfg         # Layer configuration file
 cfg/Football_layer3.cfg         # Layer configuration file
 cfg/Football_layer4.cfg         # Layer configuration file
+
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Football_gop_mode.dat	# GOP mode file
