--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Soccer.cfg
@@ -35,3 +35,7 @@ cfg/Soccer_layer3.cfg           # Layer configuration file
 cfg/Soccer_layer4.cfg           # Layer configuration file
 cfg/Soccer_layer5.cfg           # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Soccer_gop_mode.dat		# GOP mode file
