--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Football.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Football.cfg
@@ -30,3 +30,8 @@ str/Football_CIF30-1024.264     # Bitstream file
 2                               # Number of layers
 cfg/Football_layer0.cfg         # Layer configuration file
 cfg/Football_layer1.cfg         # Layer configuration file
+
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Football_gop_mode.dat	# GOP mode file
