--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Foreman.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Foreman.cfg
@@ -31,3 +31,8 @@ str/Foreman_CIF30-256.264       # Bitstream file
 cfg/Foreman_layer0.cfg          # Layer configuration file
 cfg/Foreman_layer1.cfg          # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Foreman_gop_mode.dat	# GOP mode file
+
