--- a/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Soccer.cfg
+++ b/JSVM0-config-samples/Palma-CE1-Conditions/cfg/Soccer.cfg
@@ -32,3 +32,8 @@ cfg/Soccer_layer0.cfg           # Layer configuration file
 cfg/Soccer_layer1.cfg           # Layer configuration file
 cfg/Soccer_layer2.cfg           # Layer configuration file
 
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+0				# Use adaptive GOP structure (0: no, 1: yes)
+0				# Mode decision (0: AGS Coding, 1: Mode Decision)
+ags\Soccer_gop_mode.dat		# GOP mode file
+
