--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -1,39 +1,40 @@
-# JSVM 2.0 Main Configuration File
+# Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-test.264                        # Bitstream file
-30.0                            # Maximum frame rate [Hz]
-1200                            # Maximum structural delay [ms]
-150                             # Number of frames (at maximum frame rate)
-0                               # Quality level estimation
+OutputFile              test.264               # Bitstream file
+FrameRate               30.0                   # Maximum frame rate [Hz]
+MaxDelay                1200.0                 # Maximum structural delay [ms]
+FramesToBeEncoded       150                    # Number of frames (at input frame rate)
+QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-32                              # GOP Size (at maximum frame rate)
--1                              # Intra Period
-1                               # Number of reference pictures
-1                               # Base layer mode (0:Scalable, 1:AVC compatible, 2:AVC compatible with Subsequence SEI)
-
+GOPSize                 32                     # GOP Size (at maximum frame rate)
+IntraPeriod             -1                     # Intra Period
+NumberReferenceFrames   1                      # Number of reference pictures
+BaseLayerMode           1                      # Base layer mode (0:Scalable,
+                                               #   1:AVC compatible, 2:AVC w subseq SEI)
 #============================== MOTION SEARCH ==============================
-4                               # Search mode (0:BlockSearch, 4:FastSearch )
-3                               # Search function full pel (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
-2                               # Search function sub pel  (0:SAD, 1:SSE, 2:HADAMARD) 
-96                              # Search range (Full Pel)
-4                               # Maximum number of iterations for bi-prediction search
-8                               # Search range for iterations (0: normal search range)
+SearchMode              4                      # Search mode (0:BlockSearch, 4:FastSearch)
+SearchFuncFullPel       3                      # Search function full pel
+                                               #   (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
+SearchFuncSubPel        2                      # Search function sub pel
+                                               #   (0:SAD, 1:SSE, 2:HADAMARD) 
+SearchRange             96                     # Search range (Full Pel)
+BiPredIter              4                      # Max iterations for bi-pred search
+IterSearchRange         8                      # Search range for iterations (0: normal)
 
 #============================== LOOP FILTER ==============================
-0                               # Loop filter idc ( 0: on, 1: off, 2: on except for slice boundaries)
-0                               # AlphaOffset(-6..+6): valid range
-0                               # BetaOffset (-6..+6): valid range
+LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
+                                               #   on except for slice boundaries)
+LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid range
+LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-2                               # Number of layers
-..\..\..\data\layer0.cfg   		# Layer configuration file
-..\..\..\data\layer1.cfg   		# Layer configuration file
-..\..\..\data\layer2.cfg   		# Layer configuration file
-..\..\..\data\layer3.cfg   		# Layer configuration file
+NumLayers               2                        # Number of layers
+LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
-0				# Use adaptive GOP structure (0: no, 1: yes)
-0				# Mode decision (0: AGS Coding, 1: Mode Decision)
-ags\mode.dat			# GOP mode file
+UseAdaptiveGOP          0                      # Use adaptive GOP structure (0: no, 1: yes)
+AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
+AGSGOPModeFile          ags\mode.dat           # GOP mode file
