--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -1,35 +1,35 @@
-# JSVM 2.0 Layer Configuration File
+# Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-352                                               # Input  frame width
-288                                               # Input  frame height
-15                                                # Input  frame rate [Hz]
-15                                                # Output frame rate [Hz]
-E:\Sequences\SVC\BUS_CIF15.yuv                    # Input  file
-rec_layer2.yuv                                    # Reconstructed file
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
+FrameRateIn     15                      # Input  frame rate [Hz]
+FrameRateOut    15                      # Output frame rate [Hz]
+InputFile       ../orig/BUS_CIF15.yuv   # Input  file
+ReconFile       rec_layer2.yuv          # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
-1                                                 # Update Step (0: without update, 1: with update)
-1                                                 # QP selection (0: standard, 1: adaptive)
-1                                                 # Intra mode usage (0: off, 1: on)
-1                                                 # FREXT mode (0:off, 1:on)
+UpdateStep      1                       # Update Step (0: no 1: yes)
+AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
+UseIntra        1                       # Intra mode usage (0: off, 1: on)
+FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
-0                                                 # Max. absolute delta QP
-40.00                                             # Quantization parameters
-1.00                                              # Number of FGS layers ( 1 layer - about delta QP = 6 )
+MaxDeltaQP      0                       # Max. absolute delta QP
+QP              40.0                    # Quantization parameters
+NumFGSLayers    1.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-40.00                                             # QP for motion estimation / mode decision (stage 0)
-40.00                                             # QP for motion estimation / mode decision (stage 1)
-40.00                                             # QP for motion estimation / mode decision (stage 2)
-40.00                                             # QP for motion estimation / mode decision (stage 3)
-40.00                                             # QP for motion estimation / mode decision (stage 4)
-40.00                                             # QP for motion estimation / mode decision (stage 5)
+MeQP0           40.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           40.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           40.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           40.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           40.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           40.00                   # QP for motion estimation / mode decision (stage 5)
 
-2                                                 # Inter-layer prediction (0: never, 1: always, 2:adaptive)
-1                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-2                                                 # Decoding loops (0:single, 1:multiple for LP, 2:multiple)
+InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
+BaseQuality     1                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
-2                                                 # Motion Info Mode (0:no, 1:load, 2:save )
-layer2.mot                                        # Motion Info File
+MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
+MotionInfoFile  layer2.mot              # Motion Info File
