--- a/JSVM0-config-samples/Munich-Test-Points/cfg/Bus_layer0.cfg
+++ b/JSVM0-config-samples/Munich-Test-Points/cfg/Bus_layer0.cfg
@@ -1,35 +1,35 @@
-# JSVM 2.0 Layer Configuration File
+# Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-176                                               # Input  frame width
-144                                               # Input  frame height
-7.5                                               # Input  frame rate [Hz]
-7.5                                               # Output frame rate [Hz]
-../orig/BUS_QCIF7.5.yuv                           # Input  file
-tmp/BUS_rec_layer0.yuv                            # Reconstructed file
+SourceWidth     176                     # Input  frame width
+SourceHeight    144                     # Input  frame height
+FrameRateIn     7.5                     # Input  frame rate [Hz]
+FrameRateOut    7.5                     # Output frame rate [Hz]
+InputFile       ../orig/BUS_QCIF7.5.yuv # Input  file
+ReconFile       tmp/BUS_rec_layer0.yuv  # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
-0                                                 # Update Step (0: without update, 1: with update)
-1                                                 # QP selection (0: standard, 1: adaptive)
-1                                                 # Intra mode usage (0: off, 1: on)
-0                                                 # FREXT mode (0:off, 1:on)
+UpdateStep      0                       # Update Step (0: no 1: yes)
+AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
+UseIntra        1                       # Intra mode usage (0: off, 1: on)
+FRExt           0                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
-1                                                 # Max. absolute delta QP
-34.0                                              # Quantization parameters
-0.0                                               # Number of FGS layers ( 1 layer - about delta QP = 6 )
+MaxDeltaQP      1                       # Max. absolute delta QP
+QP              34.0                    # Quantization parameters
+NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-32.00                                             # QP for motion estimation / mode decision (stage 0)
-32.00                                             # QP for motion estimation / mode decision (stage 1)
-32.00                                             # QP for motion estimation / mode decision (stage 2)
-32.00                                             # QP for motion estimation / mode decision (stage 3)
-32.00                                             # QP for motion estimation / mode decision (stage 4)
-32.00                                             # QP for motion estimation / mode decision (stage 5)
+MeQP0           32.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           32.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           32.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           32.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           32.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           32.00                   # QP for motion estimation / mode decision (stage 5)
 
-0                                                 # Inter-layer Prediction (0: never, 1: always, 2:adaptive)
-3                                                 # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-1                                                 # Decoding loops (0:single, 1:multiple for LP, 2:multiple)
+InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
+BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+DecodeLoops     1                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
-0                                                 # Motion Info Mode (0:no, 1:load, 2:save )
-mot/BUS_layer0.mot                                # Motion Info File
+MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
+MotionInfoFile  mot/BUS_layer0.mot     # Motion Info File
