--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -1,37 +1,38 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     176                     # Input  frame width
-SourceHeight    144                     # Input  frame height
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       ../orig/BUS_QCIF15.yuv  # Input  file
+InputFile       E:/Sequences/SVC/BUS_CIF15.yuv # Input  file
 ReconFile       rec_layer1.yuv          # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
+ClosedLoop      0                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
 AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
 UseIntra        1                       # Intra mode usage (0: off, 1: on)
-FRExt           0                       # FREXT mode (0:off, 1:on)
+FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
-QP              34.5707                 # Quantization parameters
-NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+QP              32.00                   # Quantization parameters
+NumFGSLayers    1                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-MeQP0           34.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           34.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           34.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           34.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           34.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           34.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           32.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           32.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           32.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           32.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           32.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           32.00                   # QP for motion estimation / mode decision (stage 5)
 
-InterLayerPred  1                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
-BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
+BaseQuality     1                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
-MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
+MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer1.mot              # Motion Info File
 
 #==================== EXTENDED SPATIAL SCALABILITY ======================
