Low-delay FGS (Xianglin.Wang@nokia.com)

--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -7,6 +7,7 @@ FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
 InputFile       E:\sequences\svc\City_QCIF15.yuv     # Input  file
 ReconFile       rec_layer2.yuv # Reconstructed file
+SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
@@ -33,6 +34,6 @@ BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no
 DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  layer2.mot     # Motion Info File
+MotionInfoFile  layer2.mot              # Motion Info File
 
-BaseLayerId     0 # base layer
+BaseLayerId     0                       # base layer
