--- a/JSVM/H264Extension/data/layer3.cfg
+++ b/JSVM/H264Extension/data/layer3.cfg
@@ -7,6 +7,7 @@ FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
 InputFile       ../orig/BUS_CIF30.yuv   # Input  file
 ReconFile       rec_layer3.yuv          # Reconstructed file
+SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      1                       # Update Step (0: no 1: yes)
