JVT-P029, JVT-Q081, JVT-P031, JVT-P100, JVT-P112

--- a/JSVM/H264Extension/src/test/EncoderBitstreamMerger/EncoderBitstreamMerger.vcproj
+++ b/JSVM/H264Extension/src/test/EncoderBitstreamMerger/EncoderBitstreamMerger.vcproj
@@ -218,6 +218,9 @@
 						BasicRuntimeChecks="3"/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\RDTree.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -230,6 +233,9 @@
 			</File>
 			<File
 				RelativePath="RatePointsManager.h">
+			</File>
+			<File
+				RelativePath=".\RDTree.hpp">
 			</File>
 		</Filter>
 		<Filter
