--- a/JSVM/H264Extension/src/test/EncoderBitstreamMerger/EncoderBitstreamMerger.vcproj
+++ b/JSVM/H264Extension/src/test/EncoderBitstreamMerger/EncoderBitstreamMerger.vcproj
@@ -235,7 +235,7 @@
 				RelativePath="RatePointsManager.h">
 			</File>
 			<File
-				RelativePath=".\RDTree.hpp">
+				RelativePath=".\RDTree.h">
 			</File>
 		</Filter>
 		<Filter
